--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 #################
+## Custom list
+#################
+*.bat
+*.cbl
+*.exe
+ps8getopt.*
+
+
+#################
 ## Eclipse
 #################
 
